# CMakeList.txt : CMake project for RedShift_Engine_CMAKE, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
add_executable (RedShift_Engine_CMAKE "RedShift_Engine_CMAKE.cpp" "RedShift_Engine_CMAKE.h")

# TODO: Add tests and install targets if needed.
